<resources>
    <string name="app_name">Indian Bank Android</string>
    <string name="logo">Bank Logo</string>
    <string name="login">Login</string>
    <string name="getAccountwithus">get Account with Us</string>
    <string name="newUser">New User? </string>
    <string name="accessCardNumber">Access Card Number</string>
    <string name="next">Next</string>
    <string name="entercinNumber">Customer Identification Number</string>
    <string name="loginLogo">Login Logo</string>
    <string name="loginToIndianBank">Log in to Indian Bank</string>
    <string name="forgotAccess">Forgot Access?</string>
    <string name="knowAccess">Know your Access</string>
    <string name="enterPinNumber">Enter Pin Number</string>
    <string name="pinNumber">Pin Number</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="enter_pin_number">Enter Pin Number</string>
    <string name="Login">Login</string>
    <string name="thankyouText">"Thanks for showing Interest with us. Our Agent will get back to yous soon. "</string>
</resources>